Fix some small bugs pointed out by @israbbani
He noticed that the Learn more button overlapped with the bottom
text in some cases and the text was a little off in the first section.
These issues are now fixed.

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		large: '(max-width: 1280px)',
 		medium: '(max-width: 980px)',
 		small: '(max-width: 736px)',
+		hsmall: '(max-height: 736px)',
 		xsmall: '(max-width: 480px)'
 	));
 
@@ -1651,6 +1652,12 @@ $baseurl: '{{ site.baseurl }}/images';
 			left: 0;
 			top: 0;
 			opacity: 0;
+		}
+
+		@include breakpoint(hsmall) {
+			.more {
+				display: none;
+			}
 		}
 
 		@include breakpoint(small) {
